--- a/site/src/styles/scss/components/menu.scss
+++ b/site/src/styles/scss/components/menu.scss
@@ -96,8 +96,8 @@
         z-index: 9999;
         list-style: none;
         padding: 0;
-        left: -10px;
-        top: -0.7rem;
+        left: -28px;
+        top: -5px;
         width: 200px;
         overflow: hidden;
         display: none;
@@ -106,6 +106,7 @@
         &-item {
           background-color: #fff;
           transition: background-color 0.2s;
+          margin-bottom: 0;
 
           a {
             text-decoration: none;
@@ -151,8 +152,8 @@
               z-index: 99;
               display: none;
               width: 130px;
-              top: 14.5rem;
-              right: -10.65rem;
+              top: 12.89rem;
+              right: -9.91rem;
               font-weight: 300;
 
               &-text {
@@ -160,6 +161,7 @@
                 color: #000;
                 position: relative;
                 border-bottom: 1px solid $light_gray;
+                margin-bottom: 0;
 
                 &:hover {
                   background-color: $black;
